ui bug fix on mobile login page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -175,3 +175,13 @@ cursor: pointer;
     width: 100% !important;
   }
 }
+
+@media (max-width: 900px) {
+  .img {
+    display: none !important;
+  }
+
+  .login-content {
+    margin-top: 50px;
+  }
+}
